--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
-name: CI
+name: CI/CD
 
+# Triggers: push to main, pull requests, and manual runs
 on:
   push:
     branches: [ main ]
@@ -7,57 +8,70 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Environment variables
 env:
-  AZURE_WEBAPP_NAME: your-app-name    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20.x'                # set this to the node version to use
+  AZURE_WEBAPP_NAME: your-app-name           # Replace with your Azure WebApp name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'             # Path to your app, '.' is repo root
+  NODE_VERSION: '20.x'                       # Node.js version
 
 permissions:
-  contents: read
+  contents: read                              # Build job can read repo contents
 
 jobs:
+  # ------------------------------
+  # Build Job
+  # ------------------------------
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      # Checkout repository
+      - uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
+      # Setup Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
 
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+      # Install dependencies, build, and test
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v4
-      with:
-        name: node-app
-        path: .
+      # Upload artifact for deployment
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
+  # ------------------------------
+  # Deploy Job
+  # ------------------------------
   deploy:
-    permissions:
-      contents: none
     runs-on: ubuntu-latest
-    needs: build
+    needs: build                              # Depends on build job
+    permissions:
+      contents: none                          # No repo read required
     environment:
       name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      # Set URL to your Azure Web App
+      url: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net
 
     steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
-      with:
-        name: node-app
+      # Download artifact from build job
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
 
-    - name: 'Deploy to Azure WebApp'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      # Deploy to Azure Web App
+      - name: Deploy to Azure WebApp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
